--- a/views/operation.html
+++ b/views/operation.html
@@ -172,6 +172,14 @@
 
                       </div>
 
+                      <div id="container add lot" onclick="add_lot_to_operation()">
+
+                        <img src="/image/add.png" id="add lot"/>
+
+                        <div id="text add lot">ajouter un lot</div>
+
+                      </div>
+
                     </div>
 
                   </div>
@@ -720,6 +728,194 @@
 
                 <span class="title liste d'article">Liste des Articles</span>
 
+                <div class="container champ">
+
+                  <div class="champ" id="Prestation champ">
+
+                    <div id="text">Prestation</div>
+
+                  </div>
+
+                  <div class="champ" id="Article champ">
+
+                    <div id="text">Article</div>
+
+                  </div>
+
+                  <div class="champ" id="Unite champ">
+
+                    <div id="text">Unite</div>
+
+                  </div>
+
+                  <div class="champ" id="Quantite champ">
+
+                    <div id="text">Quantite</div>
+
+                  </div>
+
+                  <div class="champ" id="Prix Unitaire champ">
+
+                    <div id="text">Prix Unitaire</div>
+
+                  </div>
+
+                  <div class="champ" id="Prix totale champ">
+
+                    <div id="text">Prix Totale</div>
+
+                  </div>
+
+                  <div class="champ" id="TVA champ">
+
+                    <div id="text">TVA</div>
+
+                  </div>
+
+                </div>
+
+                <div class="container article">
+
+                  <div class="box article">
+
+                    <div class="champ article" id="Prestation article">
+
+                      <div id="text">Peintre</div>
+
+                    </div>
+
+                    <div class="champ article" id="Article article">
+
+                      <div id="text">Peinture plafond</div>
+
+                    </div>
+
+                    <div class="champ article" id="Unite article">
+
+                      <div id="text">m2</div>
+
+                    </div>
+
+                    <div class="champ article" id="Quantite article">
+
+                      <div id="text">10</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix Unitaire article">
+
+                      <div id="text">12.00</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix totale article">
+
+                      <div id="text">120.00</div>
+
+                     </div>
+
+                    <div class="champ article" id="TVA article">
+
+                      <div id="text">20%</div>
+
+                    </div>
+
+                  </div>
+
+                  <div class="box article">
+
+                    <div class="champ article" id="Prestation article">
+
+                      <div id="text">Peintre</div>
+
+                    </div>
+
+                    <div class="champ article" id="Article article">
+
+                      <div id="text">Peinture plafond</div>
+
+                    </div>
+
+                    <div class="champ article" id="Unite article">
+
+                      <div id="text">m2</div>
+
+                    </div>
+
+                    <div class="champ article" id="Quantite article">
+
+                      <div id="text">10</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix Unitaire article">
+
+                      <div id="text">12.00</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix totale article">
+
+                      <div id="text">120.00</div>
+
+                     </div>
+
+                    <div class="champ article" id="TVA article">
+
+                      <div id="text">20%</div>
+
+                    </div>
+
+                  </div>
+
+                  <div class="box article">
+
+                    <div class="champ article" id="Prestation article">
+
+                      <div id="text">Peintre</div>
+
+                    </div>
+
+                    <div class="champ article" id="Article article">
+
+                      <div id="text">Peinture plafond</div>
+
+                    </div>
+
+                    <div class="champ article" id="Unite article">
+
+                      <div id="text">m2</div>
+
+                    </div>
+
+                    <div class="champ article" id="Quantite article">
+
+                      <div id="text">10</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix Unitaire article">
+
+                      <div id="text">12.00</div>
+
+                    </div>
+
+                    <div class="champ article" id="Prix totale article">
+
+                      <div id="text">120.00</div>
+
+                     </div>
+
+                    <div class="champ article" id="TVA article">
+
+                      <div id="text">20%</div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+
               </div>
 
               <div class="container form lot" id="lot second">
@@ -766,7 +962,51 @@
 
                 <span class="title liste d'article">Liste des Articles</span>
 
-                <div class="liste d'article"></div>
+                <div class="container champ">
+
+                  <div class="champ" id="Prestation champ">
+
+                    <div id="text">Prestation</div>
+
+                  </div>
+
+                  <div class="champ" id="Article champ">
+
+                    <div id="text">Article</div>
+
+                  </div>
+
+                  <div class="champ" id="Unite champ">
+
+                    <div id="text">Unite</div>
+
+                  </div>
+
+                  <div class="champ" id="Quantite champ">
+
+                    <div id="text">Quantite</div>
+
+                  </div>
+
+                  <div class="champ" id="Prix Unitaire champ">
+
+                    <div id="text">Prix Unitaire</div>
+
+                  </div>
+
+                  <div class="champ" id="Prix totale champ">
+
+                    <div id="text">Prix Totale</div>
+
+                  </div>
+
+                  <div class="champ" id="TVA champ">
+
+                    <div id="text">TVA</div>
+
+                  </div>
+
+                </div>
 
               </div>
 
