--- a/views/operation.html
+++ b/views/operation.html
@@ -360,7 +360,7 @@
 
                           <span id="title input">Nombre d'eleve</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre d'eleve" class="input generale"/>
 
                         </div>
 
@@ -368,7 +368,7 @@
 
                           <span id="title input">Nombre de classe (salle d'enseignement)</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de classe" class="input generale"/>
 
                         </div>
 
@@ -380,7 +380,7 @@
 
                           <span id="title input">Nombre de salle (poly, spectacle, sport)</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de salle" class="input generale"/>
 
                         </div>
 
@@ -388,7 +388,7 @@
 
                           <span id="title input">Nombre de logement</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de logement" class="input generale"/>
 
                         </div>
 
@@ -400,7 +400,7 @@
 
                           <span id="title input">Nombre de bureaux / autres locaux</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de bureaux / autres locaux" class="input generale"/>
 
                         </div>
 
@@ -408,7 +408,7 @@
 
                           <span id="title input">Nombre de chambre</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de chambre" class="input generale"/>
 
                         </div>
 
@@ -420,7 +420,7 @@
 
                           <span id="title input">Nombre de commerce</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de commerce" class="input generale"/>
 
                         </div>
 
@@ -428,7 +428,7 @@
 
                           <span id="title input">Nombre place de parking Infrastructure</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre place de parking Infrastructure" class="input generale"/>
 
                         </div>
 
@@ -440,27 +440,15 @@
 
                           <span id="title input">Nombre de places de parking interieur dans la superstructure</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de places de parking interieur dans la superstructure" class="input generale"/>
 
                         </div>
 
                         <div class="2 input">
 
-                          <span id="title input">Nombre place de parking Infrastructure</span>
-
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
-
-                        </div>
-
-                      </div>
-
-                      <div class="container 2 input dimension">
-
-                        <div class="1 input">
-
                           <span id="title input">Nombre de places de parking exterieur</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de places de parking exterieur" class="input generale"/>
 
                         </div>
 
@@ -488,7 +476,7 @@
 
                           <span id="title input">Surface de locaux technique</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Surface de locaux technique" class="input generale"/>
 
                         </div>
 
@@ -496,7 +484,7 @@
 
                           <span id="title input">Surface des garages et locaux annexes</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Surface des garages et locaux annexes" class="input generale"/>
 
                         </div>
 
@@ -508,15 +496,15 @@
 
                           <span id="title input">SHAB</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="SHAB" class="input generale"/>
 
                         </div>
 
                         <div class="2 input">
 
-                          <span id="title input">SDO</span>
+                          <span id="title input">SU</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="SU" class="input generale"/>
 
                         </div>
 
@@ -526,17 +514,17 @@
 
                         <div class="1 input">
 
-                          <span id="title input">SDP</span>
+                          <span id="title input">SDO</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="SDO" class="input generale"/>
 
                         </div>
 
                         <div class="2 input">
 
-                          <span id="title input">Nombre de niveaux superstructure</span>
+                          <span id="title input">SDP</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="SDP" class="input generale"/>
 
                         </div>
 
@@ -548,7 +536,15 @@
 
                           <span id="title input">Nombre de niveaux Infrastructure</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Nombre de niveaux Infrastructure" class="input generale"/>
+
+                        </div>
+
+                        <div class="2 input">
+
+                          <span id="title input">Nombre de niveaux superstructure</span>
+
+                          <input name="TEST" value="" id="Nombre de niveaux superstructure" class="input generale"/>
 
                         </div>
 
@@ -576,7 +572,7 @@
 
                           <span id="title input">Emprise de la parcelle</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Emprise de la parcelle" class="input generale"/>
 
                         </div>
 
@@ -584,7 +580,7 @@
 
                           <span id="title input">Surface d'espace verts</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Surface d'espace verts" class="input generale"/>
 
                         </div>
 
@@ -596,7 +592,7 @@
 
                           <span id="title input">Surface minerale</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Surface minerale" class="input generale"/>
 
                         </div>
 
@@ -624,7 +620,7 @@
 
                           <span id="title input">Emprise au sol</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Emprise au sol" class="input generale"/>
 
                         </div>
 
@@ -632,7 +628,7 @@
 
                           <span id="title input">Surface de toiture (isolee thermiquement)</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Surface de toiture (isolee thermiquement)" class="input generale"/>
 
                         </div>
 
@@ -644,7 +640,7 @@
 
                           <span id="title input">Emprise de facade totale</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Emprise de facade totale" class="input generale"/>
 
                         </div>
 
@@ -656,7 +652,7 @@
 
                           <span id="title input">Dont surface de facade pleine</span>
 
-                          <input name="TEST" value="" id="Nom du site" class="input generale"/>
+                          <input name="TEST" value="" id="Dont surface de facade pleine" class="input generale"/>
 
                         </div>
 
@@ -664,7 +660,7 @@
 
                           <span id="title input">Dont surface de vitrage</span>
 
-                          <input name="TEST" value="" id="Categorie du site" class="input generale"/>
+                          <input name="TEST" value="" id="Dont surface de vitrage" class="input generale"/>
 
                         </div>
 
