--- a/views/home.html
+++ b/views/home.html
@@ -138,7 +138,7 @@
 
                     </script>
 
-                    <a href="/home/Construction College a Boueni" class="myButton">
+                    <a class="myButton" onclick="get_new_op();">
 
                       <img src="/image/plus.png" id="icon plus"/>
 
