--- a/views/operation.html
+++ b/views/operation.html
@@ -160,19 +160,11 @@
 
                         <img src="/image/lot.png" id="operation"/>
 
-                        <span id="text element of list">Lot</span>
+                        <span id="text element of list">LOT TESTE</span>
 
                       </div>
 
-                      <div class="container of the lot" id="second">
-
-                        <img src="/image/lot.png" id="operation"/>
-
-                        <span id="text element of list">Lot</span>
-
-                      </div>
-
-                      <div id="container add lot" onclick="add_lot_to_operation()">
+                      <div id="container add lot" onclick="add_lot_to_operation(['Nouveau Lot', 'flex', 'any', '', '', ''])">
 
                         <img src="/image/add.png" id="add lot"/>
 
@@ -907,98 +899,6 @@
                       <div id="text">20%</div>
 
                     </div>
-
-                  </div>
-
-                </div>
-
-              </div>
-
-              <div class="container form lot" id="lot second">
-
-                <div class="container info generale lot">
-
-                  <div class="container 2 input dimension">
-
-                    <div class="1 input lot">
-
-                      <span id="title input">Nom du lot</span>
-
-                      <input name="TEST" value="" id="Nom du site" class="input generale"/>
-
-                    </div>
-
-                    <div class="2 input lot">
-
-                      <span id="title input">Numero du lot</span>
-
-                      <input name="TEST" value="" id="Categorie du site" class="input generale"/>
-
-                    </div>
-
-                    <div class="2 input lot">
-
-                      <span id="title input">Entreprise</span>
-
-                      <input name="TEST" value="" id="Categorie du site" class="input generale"/>
-
-                    </div>
-
-                    <div class="2 input lot">
-
-                      <span id="title input">Date</span>
-
-                      <input name="TEST" value="" id="Categorie du site" class="input generale"/>
-
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <span class="title liste d'article">Liste des Articles</span>
-
-                <div class="container champ">
-
-                  <div class="champ" id="Prestation champ">
-
-                    <div id="text">Prestation</div>
-
-                  </div>
-
-                  <div class="champ" id="Article champ">
-
-                    <div id="text">Article</div>
-
-                  </div>
-
-                  <div class="champ" id="Unite champ">
-
-                    <div id="text">Unite</div>
-
-                  </div>
-
-                  <div class="champ" id="Quantite champ">
-
-                    <div id="text">Quantite</div>
-
-                  </div>
-
-                  <div class="champ" id="Prix Unitaire champ">
-
-                    <div id="text">Prix Unitaire</div>
-
-                  </div>
-
-                  <div class="champ" id="Prix totale champ">
-
-                    <div id="text">Prix Totale</div>
-
-                  </div>
-
-                  <div class="champ" id="TVA champ">
-
-                    <div id="text">TVA</div>
 
                   </div>
 
