--- a/views/operation.html
+++ b/views/operation.html
@@ -146,7 +146,7 @@
 
                     <div id="main information of the list of the operation">
 
-                      <img src="/image/triangle_bas.png" class="triangle_bas" id="1"/>
+                      <img src="/image/triangle_bas.png" class="triangle_bas" id="1 chevron"/>
 
                       <img src="/image/operation.png" id="operation"/>
 
@@ -244,15 +244,15 @@
 
                         <option id="nothing"></option>
 
-                        <option id="fr">Ecole / Groupe Scolaire</option>
+                        <option id="Ecole / Groupe Scolaire">Ecole / Groupe Scolaire</option>
 
-                        <option id="nl">College</option>
+                        <option id="College">College</option>
 
-                        <option id="en">Lycee</option>
+                        <option id="Lycee">Lycee</option>
 
-                        <option id="other">Enseignement superieur</option>
+                        <option id="Enseignement superieur">Enseignement superieur</option>
 
-                        <option id="other">Etablissement de recherche</option>
+                        <option id="Etablissement de recherche">Etablissement de recherche</option>
 
                       </select>
 
@@ -260,15 +260,15 @@
 
                         <option id="nothing"></option>
 
-                        <option id="fr">Logements collectifs</option>
+                        <option id="Logements collectifs">Logements collectifs</option>
 
-                        <option id="nl">Logements individuels</option>
+                        <option id="Logements individuels">Logements individuels</option>
 
-                        <option id="en">Hotellerie</option>
+                        <option id="Hotellerie">Hotellerie</option>
 
-                        <option id="other">Residence senior</option>
+                        <option id="Residence senior">Residence senior</option>
 
-                        <option id="other">Residence etudiante</option>
+                        <option id="Residence etudiante">Residence etudiante</option>
 
                       </select>
 
@@ -276,13 +276,13 @@
 
                         <option id="nothing"></option>
 
-                        <option id="fr">Batiment administratif</option>
+                        <option id="Batiment administratif">Batiment administratif</option>
 
-                        <option id="nl">Bureaux</option>
+                        <option id="Bureaux">Bureaux</option>
 
-                        <option id="en">Bureaux + Locaux commerciaux</option>
+                        <option id="Bureaux + Locaux commerciaux">Bureaux + Locaux commerciaux</option>
 
-                        <option id="other">Locaux commerciaux</option>
+                        <option id="Locaux commerciaux">Locaux commerciaux</option>
 
                       </select>
 
@@ -290,13 +290,13 @@
 
                         <option id="nothing"></option>
 
-                        <option id="fr">Etablissement de sante</option>
+                        <option id="Etablissement de sante">Etablissement de sante</option>
 
-                        <option id="nl">Etablissement socio-culturel</option>
+                        <option id="Etablissement socio-culturel">Etablissement socio-culturel</option>
 
-                        <option id="en">Industrie (Entrepot, Garage et parking)</option>
+                        <option id="Industrie (Entrepot, Garage et parking)">Industrie (Entrepot, Garage et parking)</option>
 
-                        <option id="other">Equipement sportif</option>
+                        <option id="Equipement sportif">Equipement sportif</option>
 
                       </select>
 
@@ -776,7 +776,7 @@
 
                   <div id="box montant totale lot"></div>
 
-                  <button type="button" class="button1">Sauvegarder</button>
+                  <button type="button" class="button1" id="button save op">Sauvegarder</button>
 
                 </div>
 
