--- a/views/operation.html
+++ b/views/operation.html
@@ -128,12 +128,6 @@
 
               </div>
 
-              <button id="button of the title" onclick="get_focus()">
-
-                  <img src="/image/ecrivez.png" id="crayon of the title">
-
-              </button>
-
             </header>
 
             <div id="container main information">
@@ -218,15 +212,15 @@
 
                       <select name="Categorie" value="" id="Categorie du site" class="input generale" onclick="select_categorie(0);">
 
-                        <option onclick="select_categorie(-1);" id="nothing"></option>
+                        <option id="nothing"></option>
 
-                        <option onclick="select_categorie(0);" id="Enseignement">Enseignement</option>
+                        <option id="Enseignement">Enseignement</option>
 
-                        <option onclick="select_categorie(1);" id="Logement et Hebergement">Logement et Hebergement</option>
+                        <option id="Logement et Hebergement">Logement et Hebergement</option>
 
-                        <option onclick="select_categorie(2);" id="Bureaux et Administration">Bureaux et Administration</option>
+                        <option id="Bureaux et Administration">Bureaux et Administration</option>
 
-                        <option onclick="select_categorie(3);" id="Divers">Divers</option>
+                        <option id="Divers">Divers</option>
 
                       </select>
 
@@ -240,7 +234,7 @@
 
                       <span id="title input">Sous-Categorie du site</span>
 
-                      <select name="Sous-Categorie" value="" id="Sous-Categorie Enseignement" class="input generale_bis">
+                      <select name="Sous_Categorie" value="" id="Sous-Categorie Enseignement" class="input generale_bis">
 
                         <option id="nothing"></option>
 
@@ -256,7 +250,7 @@
 
                       </select>
 
-                      <select name="Sous-Categorie" value="" id="Sous-Categorie Logement et Hebergement" class="input generale_bis">
+                      <select name="Sous_Categorie" value="" id="Sous-Categorie Logement et Hebergement" class="input generale_bis">
 
                         <option id="nothing"></option>
 
@@ -272,7 +266,7 @@
 
                       </select>
 
-                      <select name="Sous-Categorie" value="" id="Sous-Categorie Bureaux et Administration" class="input generale_bis">
+                      <select name="Sous_Categorie" value="" id="Sous-Categorie Bureaux et Administration" class="input generale_bis">
 
                         <option id="nothing"></option>
 
@@ -286,7 +280,7 @@
 
                       </select>
 
-                      <select name="Sous-Categorie" value="" id="Sous-Categorie Divers" class="input generale_bis">
+                      <select name="Sous_Categorie" value="" id="Sous-Categorie Divers" class="input generale_bis">
 
                         <option id="nothing"></option>
 
@@ -486,7 +480,7 @@
 
                           <span id="title input">Nombre de logement</span>
 
-                          <input name="Nombre de logement" value="" id="Nombre de logement" class="input generale"/>
+                          <input name="Nombre_de_logement" value="" id="Nombre de logement" class="input generale"/>
 
                         </div>
 
@@ -594,7 +588,7 @@
 
                           <span id="title input">SHAB</span>
 
-                          <input name="TEST" value="" id="SHAB" class="input generale"/>
+                          <input name="SHAB" value="" id="SHAB" class="input generale"/>
 
                         </div>
 
@@ -602,7 +596,7 @@
 
                           <span id="title input">SU</span>
 
-                          <input name="TEST" value="" id="SU" class="input generale"/>
+                          <input name="SU" value="" id="SU" class="input generale"/>
 
                         </div>
 
@@ -614,7 +608,7 @@
 
                           <span id="title input">SDO</span>
 
-                          <input name="TEST" value="" id="SDO" class="input generale"/>
+                          <input name="SDO" value="" id="SDO" class="input generale"/>
 
                         </div>
 
@@ -622,7 +616,7 @@
 
                           <span id="title input">SDP</span>
 
-                          <input name="TEST" value="" id="SDP" class="input generale"/>
+                          <input name="SDP" value="" id="SDP" class="input generale"/>
 
                         </div>
 
@@ -634,7 +628,7 @@
 
                           <span id="title input">Nombre de niveaux Infrastructure</span>
 
-                          <input name="TEST" value="" id="Nombre de niveaux Infrastructure" class="input generale"/>
+                          <input name="Nombre_de_niveaux_Infrastructure" value="" id="Nombre de niveaux Infrastructure" class="input generale"/>
 
                         </div>
 
@@ -642,7 +636,7 @@
 
                           <span id="title input">Nombre de niveaux superstructure</span>
 
-                          <input name="TEST" value="" id="Nombre de niveaux superstructure" class="input generale"/>
+                          <input name="Nombre_de_niveaux_superstructure" value="" id="Nombre de niveaux superstructure" class="input generale"/>
 
                         </div>
 
@@ -718,7 +712,7 @@
 
                           <span id="title input">Emprise au sol</span>
 
-                          <input name="Emprise au sol" value="" id="Emprise au sol" class="input generale"/>
+                          <input name="Emprise_au_sol" value="" id="Emprise au sol" class="input generale"/>
 
                         </div>
 
@@ -726,7 +720,7 @@
 
                           <span id="title input">Surface de toiture (isolee thermiquement)</span>
 
-                          <input name="Surface de toiture (isolee thermiquement)" value="" id="Surface de toiture (isolee thermiquement)" class="input generale"/>
+                          <input name="Surface_de_toiture_(isolee_thermiquement)" value="" id="Surface de toiture (isolee thermiquement)" class="input generale"/>
 
                         </div>
 
@@ -738,7 +732,7 @@
 
                           <span id="title input">Emprise de facade totale</span>
 
-                          <input name="Emprise de facade totale" value="" id="Emprise de facade totale" class="input generale"/>
+                          <input name="Emprise_de_facade_totale" value="" id="Emprise de facade totale" class="input generale"/>
 
                         </div>
 
@@ -750,7 +744,7 @@
 
                           <span id="title input">Dont surface de facade pleine</span>
 
-                          <input name="Dont surface de facade pleine" value="" id="Dont surface de facade pleine" class="input generale"/>
+                          <input name="Dont_surface_de_facade_pleine" value="" id="Dont surface de facade pleine" class="input generale"/>
 
                         </div>
 
@@ -758,7 +752,7 @@
 
                           <span id="title input">Dont surface de vitrage</span>
 
-                          <input name="Dont surface de vitrage" value="" id="Dont surface de vitrage" class="input generale"/>
+                          <input name="Dont_surface_de_vitrage" value="" id="Dont surface de vitrage" class="input generale"/>
 
                         </div>
 
@@ -806,7 +800,7 @@
 
               </div>
 
-              <input name="TEST" value="" id="Nom du site" class="ajout d'article" readonly/>
+              <input name="nom_article" value="" id="" class="ajout d'article" readonly/>
 
             </div>
 
@@ -814,7 +808,7 @@
 
               <span id="title input">Unite de l'article</span>
 
-              <input name="TEST" value="" id="Categorie du site" class="ajout d'article"/>
+              <input name="unite article" value="" id="Categorie du site" class="ajout d'article"/>
 
             </div>
 
@@ -822,7 +816,7 @@
 
               <span id="title input">Quantite de l'article</span>
 
-              <input name="TEST" value="" id="Nom du site" class="ajout d'article"/>
+              <input name="quantite article" value="" id="Nom du site" class="ajout d'article"/>
 
             </div>
 
@@ -830,7 +824,7 @@
 
               <span id="title input">Prix unitaire de l'article</span>
 
-              <input name="TEST" value="" id="Categorie du site" class="ajout d'article"/>
+              <input name="prix unitaire article" value="" id="Categorie du site" class="ajout d'article"/>
 
             </div>
 
@@ -838,7 +832,7 @@
 
               <span id="title input">Prix totale de l'article</span>
 
-              <input name="TEST" value="" id="Categorie du site" class="ajout d'article" readonly/>
+              <input name="prix totale article" value="" id="Categorie du site" class="ajout d'article" readonly/>
 
             </div>
 
@@ -853,6 +847,62 @@
           </div>
 
         </nav>
+
+        <nav id="navigation d'ajout d'entreprise">
+
+          <div id="cancel add">
+
+            <img src="/image/close.png" id="cancel" onclick="cancel_slide_entreprise();"/>
+
+          </div>
+
+          <div id="container input ajout d'entreprise">
+
+            <div class="input ajout d'entreprise">
+
+              <span id="title input">Nom de l'entreprise</span>
+
+              <input name="TEST" value="" id="Nom entreprise" class="ajout d'entreprise"/>
+
+            </div>
+
+          </div>
+
+          <div id="container submit">
+
+            <button type="button" class="button1" id="button entreprise" onclick="add_entreprise();">Sauvegarder</button>
+
+          </div>
+
+        </nav>
+
+        <div id="recherche d'article">
+
+          <div id="filtrage article">
+
+            <div id="title filtrage article">Aborescence</div>
+
+            <div id="aborescence article"></div>
+
+          </div>
+
+          <div id="resultat article">
+
+            <div id="title resultat article">Resultat</div>
+
+            <div id="liste article">
+
+              <div class="option filtrage section">CONSTRUCTION</div>
+
+              <div class="option filtrage section">DEMOLITION</div>
+
+              <div class="option filtrage section">STRUCTURATION</div>
+
+            </div>
+
+          </div>
+
+        </div>
 
       </div>
 
