--- a/css/operation.css
+++ b/css/operation.css
@@ -1187,11 +1187,25 @@ div[id="recherche d'article"] {
   box-sizing: border-box;
   position: absolute;
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  flex-direction: column;
+  margin-left: 72px;
+  margin-top: 965px;
+  width: 96.3%;
   height: 100%;
-  background-color: red;
   z-index:2;
+  transition-delay: 0s;
+  transition-duration: 0.2s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgb(255, 255, 255);
+}
+div[id="main info recherche article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 90%;
+  flex-direction: row;
 }
 div[id="filtrage article"] {
   box-sizing: border-box;
@@ -1200,8 +1214,8 @@ div[id="filtrage article"] {
   width: 50%;
   height: 100%;
   flex-direction: column;
-  background-color: blue;
   align-items: center;
+  border-color: #22334d;
 }
 div[id="resultat article"] {
   box-sizing: border-box;
@@ -1210,7 +1224,6 @@ div[id="resultat article"] {
   width: 50%;
   height: 100%;
   flex-direction: column;
-  background-color: green;
   align-items: center;
 }
 div[id="title filtrage article"] {
@@ -1219,8 +1232,8 @@ div[id="title filtrage article"] {
   position: relative;
   width: 50%;
   height: 5%;
-  background-color: violet;
   margin-top: 20px;
+  margin-bottom: 20px;
   justify-content: center;
   align-items: center;
   font-weight: bold;
@@ -1232,7 +1245,6 @@ div[id="title resultat article"] {
   position: relative;
   width: 50%;
   height: 5%;
-  background-color: violet;
   margin-top: 20px;
   justify-content: center;
   font-size: large;
@@ -1244,16 +1256,255 @@ div[id="aborescence article"] {
   display: flex;
   position: relative;
   width: 100%;
-  height: 92%;
-  background-color: sienna;
+  height: 80%;
   margin-top: 20px;
+  flex-direction: column;
+  overflow-y: auto;
+}
+div[id="aborescence article"]::-webkit-scrollbar {
+  width: 0px;
 }
 div[id="liste article"] {
   box-sizing: border-box;
   display: flex;
   position: relative;
   width: 100%;
-  height: 92%;
-  background-color: darkgoldenrod;
+  height: 80%;
   margin-top: 20px;
+  flex-direction: column;
+  overflow-y: auto;
+}
+div[id="liste article"]::-webkit-scrollbar {
+  width: 0px;
+}
+div[class="option filtrage section"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  align-items: center;
+  flex-direction: column;
+}
+div[class="texte section"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
+img[id="plus"] {
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  width: 20px;
+  height: 20px;
+}
+img[id="moins"] {
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  width: 20px;
+  height: 20px;
+}
+div[class="liste options filtrage theme"] {
+  box-sizing: border-box;
+  position: relative;
+  display: none;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+div[class="option filtrage theme"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  align-items: center;
+  flex-direction: column;
+}
+div[class="texte theme"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
+div[class="liste options filtrage chapitre"] {
+  box-sizing: border-box;
+  position: relative;
+  display: none;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+div[class="option filtrage chapitre"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  flex-direction: column;
+  align-items: center;
+}
+div[class="texte chapitre"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
+div[class="liste options filtrage sous-chapitre"] {
+  box-sizing: border-box;
+  position: relative;
+  display: none;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+div[class="option filtrage sous-chapitre"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  flex-direction: column;
+  align-items: center;
+}
+div[class="texte sous-chapitre"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
+div[class="liste options filtrage prestation"] {
+  box-sizing: border-box;
+  position: relative;
+  display: none;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+div[class="option filtrage prestation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  flex-direction: column;
+  align-items: center;
+}
+div[class="texte prestation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
+div[id="title liste article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 20px;
+  flex-direction: row;
+}
+div[class="nom liste article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[class="unite liste article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[class="selection liste article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[class="article of liste"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 30px;
+  flex-direction: row;
+  margin-top: 5px;
+  align-items: center;
+}
+div[class="nom of article of liste"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[class="unite of article of liste"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[class="selection of article of liste"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 33%;
+  height: 20px;
+  margin-left: 30px;
+}
+div[id="bottom page recherche article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 10%;
+}
+div[id="container submit recherche article"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  margin-top: 20px;
+  width: 100%;
+  height: 100%;
+  justify-content: right;
+}
+button[id="button save article"] {
+  margin-right: 20px;
 }
